# cmgr-artifact-server

./: 11-use-resolv-conf.sh  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  default.conf.template  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: backend.rs  lib.rs  main.rs  s3.rs  selfhosted.rs  watcher.rs
src/backend/: s3.rs  selfhosted.rs
