[package]
name = "cmgr-artifact-server"
description = "Server for cmgr challenge artifacts"
version = "2.2.0"
edition = "2024"
authors = [
  "picoCTF team <opensource@picoctf.org>",
]
repository = "https://github.com/picoCTF/cmgr-artifact-server"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
aws-config = "1.6.2"
aws-sdk-cloudfront = "1.72.0"
aws-sdk-s3 = "1.83.0"
blake2 = "0.10.6"
clap = { version = "4.5.37", features = ["cargo"] }
env_logger = "0.11.8"
flate2 = "1.1.1"
hex = "0.4.3"
http = "1.3.1"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-staticfile = "0.10.1"
hyper-util = { version = "0.1.13", features = ["tokio"] }
log = "0.4.27"
notify-debouncer-full = "0.5.0"
sha2 = "0.10.9"
tar = "0.4.44"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
